# silly_player_x

./: .gitignore  CMakeLists.txt  README.md
3rd/bin32/: fdk-aac.lib
3rd/lib32/: libx264.lib  x264.def  yuv.lib
cmake/Modules/: FindSDL2.cmake
issues/: issues.txt
res/: ffmpeg_conv.txt
silly_player_a/: CMakeLists.txt  player_audio.c
silly_player_a2/: CMakeLists.txt  player_audio.c
silly_player_av/: CMakeLists.txt  player_av - 副本.c  test_audio.cpp  test_video.c
silly_player_lib/: CMakeLists.txt  audio.c  audio.h  global.c  packet_queue.c  packet_queue.h  parse.c  parse.h  silly_player.c  silly_player.h  silly_player_internal.h  silly_player_params.h  video.c  video.h
silly_player_lib/util/: LogOnce.cpp  LogOnce.h  base.c  cmwave.c  cmwave.h  event.c  event.h  pipe-windows.c  pipe.h  platform-windows.c  platform.c  platform.h  threading-windows.c
